Issue 891: Make better contrast for text

--- a/themes/mzk/less/variables.less
+++ b/themes/mzk/less/variables.less
@@ -1,4 +1,4 @@
-@brand-primary:         #3cb9c3;
+@brand-primary:         #297e84;
 
 @primary:               @brand-primary;
 @primary-darken:        darken(@primary, 10%);
